[gd_scene load_steps=3 format=3 uid="uid://843efoa3i38e"]

[ext_resource type="Script" path="res://script/UI/npc_quest.gd" id="1_udcny"]
[ext_resource type="Texture2D" uid="uid://b5ti5gsgt2a81" path="res://ART/weapon/inventory-slot.png" id="2_ncg10"]

[node name="npc_quest" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_left = 1.0
offset_top = 1.0
offset_right = 139.0
offset_bottom = 62.0
script = ExtResource("1_udcny")

[node name="quest1_ui" type="NinePatchRect" parent="."]
visible = false
layout_mode = 0
offset_top = -1.0
offset_right = 276.0
offset_bottom = 123.0
scale = Vector2(0.5, 0.5)
texture = ExtResource("2_ncg10")
patch_margin_left = 3
patch_margin_top = 3
patch_margin_right = 3
patch_margin_bottom = 3

[node name="Name" type="RichTextLabel" parent="quest1_ui"]
layout_mode = 0
offset_left = 4.0
offset_top = 4.0
offset_right = 302.0
offset_bottom = 38.0
scale = Vector2(0.9, 0.9)
text = "Worker Quest:"

[node name="Text" type="RichTextLabel" parent="quest1_ui"]
layout_mode = 0
offset_left = 4.0
offset_top = 40.0
offset_right = 339.0
offset_bottom = 140.0
scale = Vector2(0.8, 0.8)
text = "The frist quest is test,Could you go pick up 3 stick off the ground?"

[node name="yesButton1" type="Button" parent="quest1_ui"]
modulate = Color(0, 1, 0, 1)
layout_mode = 0
offset_left = 66.0
offset_top = 88.0
offset_right = 101.0
offset_bottom = 119.0
text = "Yes"

[node name="noButton1" type="Button" parent="quest1_ui"]
modulate = Color(1, 0, 0, 1)
layout_mode = 0
offset_left = 176.0
offset_top = 88.0
offset_right = 211.0
offset_bottom = 119.0
text = "No"

[node name="quest2_ui" type="NinePatchRect" parent="."]
visible = false
layout_mode = 0
offset_right = 276.0
offset_bottom = 124.0
scale = Vector2(0.5, 0.5)
texture = ExtResource("2_ncg10")
patch_margin_left = 3
patch_margin_top = 3
patch_margin_right = 3
patch_margin_bottom = 3

[node name="Name" type="RichTextLabel" parent="quest2_ui"]
layout_mode = 0
offset_left = 4.0
offset_top = 4.0
offset_right = 302.0
offset_bottom = 38.0
scale = Vector2(0.9, 0.9)
text = "Worker Quest:"

[node name="Text" type="RichTextLabel" parent="quest2_ui"]
layout_mode = 0
offset_left = 4.0
offset_top = 40.0
offset_right = 339.0
offset_bottom = 140.0
scale = Vector2(0.8, 0.8)
text = "The secound quest is test,Could you monter  go pick up 2 slime from slime 
monter?"

[node name="yesButton2" type="Button" parent="quest2_ui"]
modulate = Color(0, 1, 0, 1)
layout_mode = 0
offset_left = 66.0
offset_top = 88.0
offset_right = 101.0
offset_bottom = 119.0
text = "Yes"

[node name="noButton2" type="Button" parent="quest2_ui"]
modulate = Color(1, 0, 0, 1)
layout_mode = 0
offset_left = 176.0
offset_top = 88.0
offset_right = 211.0
offset_bottom = 119.0
text = "No"

[node name="no_quest" type="NinePatchRect" parent="."]
visible = false
layout_mode = 0
offset_left = 1.0
offset_top = -2.0
offset_right = 277.0
offset_bottom = 122.0
scale = Vector2(0.5, 0.5)
texture = ExtResource("2_ncg10")
patch_margin_left = 3
patch_margin_top = 3
patch_margin_right = 3
patch_margin_bottom = 3

[node name="Name" type="RichTextLabel" parent="no_quest"]
layout_mode = 0
offset_left = 4.0
offset_top = 4.0
offset_right = 302.0
offset_bottom = 38.0
scale = Vector2(0.9, 0.9)
text = "Worker Quest:"

[node name="Text" type="RichTextLabel" parent="no_quest"]
layout_mode = 0
offset_left = 4.0
offset_top = 40.0
offset_right = 339.0
offset_bottom = 140.0
scale = Vector2(0.8, 0.8)
text = "no current  quest please come  back later!"

[node name="finished_quest" type="NinePatchRect" parent="."]
visible = false
layout_mode = 0
offset_top = -2.0
offset_right = 276.0
offset_bottom = 122.0
scale = Vector2(0.5, 0.5)
texture = ExtResource("2_ncg10")
patch_margin_left = 3
patch_margin_top = 3
patch_margin_right = 3
patch_margin_bottom = 3

[node name="Name" type="RichTextLabel" parent="finished_quest"]
layout_mode = 0
offset_left = 4.0
offset_top = 4.0
offset_right = 302.0
offset_bottom = 38.0
scale = Vector2(0.9, 0.9)
text = "Worker Quest:"

[node name="Text" type="RichTextLabel" parent="finished_quest"]
layout_mode = 0
offset_left = 4.0
offset_top = 40.0
offset_right = 339.0
offset_bottom = 140.0
scale = Vector2(0.8, 0.8)
text = "Goodjob!! Thank
you so much!!"

[connection signal="pressed" from="quest1_ui/yesButton1" to="." method="_on_yes_button_1_pressed"]
[connection signal="pressed" from="quest1_ui/noButton1" to="." method="_on_no_button_1_pressed"]
[connection signal="pressed" from="quest2_ui/yesButton2" to="." method="_on_yes_button_2_pressed"]
[connection signal="pressed" from="quest2_ui/noButton2" to="." method="_on_no_button_2_pressed"]
